--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,7 @@
-.App {
-  font-family: sans-serif;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Roboto", sans-serif;
   text-align: center;
 }
