created Login page DO NOT MERGE TO MAIN

--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,18 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Roboto", sans-serif;
-  text-align: center;
+}
+
+.App {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  padding: 392px 560px;
+  gap: 10px;
+
+  position: relative;
+
+  background: linear-gradient(116.82deg, #5967df 0.01%, #4fa494 100%);
 }
